fix divs overlapping

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -4665,13 +4665,13 @@
   }
 
   .hero-section .text-content {
-      flex: 0 0 50%;
-      max-width: 50%;
+      flex: 0 0 55;
+      max-width: 55%;
   }
 
   .hero-section .image-content {
-      flex: 0 0 50%;
-      max-width: 50%;
+      flex: 0 0 45%;
+      max-width: 45%;
       margin-top: 0;
   }
 }
